[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actors/Enemies/Bosses/Boss.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Enemies/Enemy.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 24 )

[sub_resource type="CircleShape2D" id=5]
radius = 1024.0

[node name="Boss" instance=ExtResource( 2 )]
script = ExtResource( 1 )
TILE_SIZE = 32
WALK_SPEED = 16
GRAVITY = 2

[node name="DefaultShape" parent="." index="0"]
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="." index="1"]
position = Vector2( 0, 0 )
frames = null

[node name="ProjectileSpawnPoint" type="Position2D" parent="AnimatedSprite" index="0"]
position = Vector2( 18, 0 )

[node name="Stats" parent="." index="2"]
current_hp = 40
max_hp = 40

[node name="CollisionShape2D" parent="Hurtboxes/HurtBox" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="CollisionShape2D" parent="PlayerScanArea" index="0"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="." index="6"]
autostart = true

[node name="Label" type="Label" parent="." index="7"]
margin_left = 8.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -34.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtboxes/HurtBox"]
[editable path="Hitbox"]
